--- a/main/templates/main/navbar.html
+++ b/main/templates/main/navbar.html
@@ -10,7 +10,7 @@
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
         <a class="nav-item nav-link active" href="{% url 'index' %}">Startseite</a>
-        <a class="nav-item nav-link disabled" href="#">Projekte</a>
+        <a class="nav-item nav-link" href="{% url 'projects' %}">Projekte</a>
         <a class="nav-item nav-link" href="{% url 'experiments' %}">Online Experimente</a>
         <a class="nav-item nav-link disabled" href="#">Live Experimente</a>
         </div>
