--- a/main/templates/main/navbar.html
+++ b/main/templates/main/navbar.html
@@ -1,5 +1,10 @@
 {% load static %}
-
+<style>
+.nav-right{
+    right: 50px;
+    position:absolute;
+}
+</style>
 <nav class="navbar navbar-expand-lg navbar-light shadow">
     <a class="navbar-brand" href="{% url 'index' %}">
         <img src="{% static 'main/images/hsb_logo.png' %}" alt="">
@@ -9,10 +14,22 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-        <a class="nav-item nav-link active" href="{% url 'index' %}">Startseite</a>
-        <a class="nav-item nav-link" href="{% url 'projects' %}">Projekte</a>
-        <a class="nav-item nav-link" href="{% url 'experiments' %}">Online Experimente</a>
-        <a class="nav-item nav-link disabled" href="#">Live Experimente</a>
+            <a class="nav-item nav-link active" href="{% url 'index' %}">Startseite</a>
+            <a class="nav-item nav-link" href="{% url 'projects' %}">Projekte</a>
+            <a class="nav-item nav-link" href="{% url 'experiments' %}">Online Experimente</a>
+            <a class="nav-item nav-link disabled" href="#">Live Experimente</a>
         </div>
+
+        <ul class="navbar-nav nav-right ml-auto">
+            {% if user.is_authenticated %}
+                <li class="nav-item">
+                    <a class="nav-item nav-link" href="/logout">Logout</a>
+                </li>
+            {% else %}
+                <li class="nav-item">
+                    <a class="nav-item nav-link" href="/login">Login</a>
+                </li>  
+            {% endif %}
+        </ul>
     </div>
 </nav>
