--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -29,7 +29,7 @@
 
       <div class="carousel-item active" data-bs-interval="10000">
         <div class="text-center" style="margin-top: 18vw; position: absolute; width: 100%;">
-          <h1 style="color: #000000; font-size: 6vw; letter-spacing: 20px; font-weight:400;">Photonics</h1>
+          <h1 style="color: #000000; font-size: 6vw; letter-spacing: 20px; font-weight:400;">Hier könnte Ihre Werbung stehen</h1>
         </div>
       
         <div id="particles-js" class="text-center">
