--- a/main/templates/main/projects.html
+++ b/main/templates/main/projects.html
@@ -3,118 +3,56 @@
 {% block content %}
 
 <style>
-.project{
-    margin-top: 150px;
-}
+    .cardholder{
+        margin-bottom: 100px;
+    }
+    .card-blue{
+        background-color: var(--hsb-blue);
+        height: 35px;
+    }
+    .card-image{
+        height: 150px;
+        overflow: hidden;
+        background-position: center;
+    }
 
-.carousel-prew{
-    padding: 0px !important;
-    cursor: pointer;
-}
-
-.carousel-prew img{
-    width: 100%;
-}
-
-.carousel-prew:hover{
- border: 2px solid #000;
-}
-
-.prev-btn-left{
-    width: 10%;
-}
-
-.prev-btn-right{
-    width: 10%;
-}
-
-.prev-btn-left:hover{
-    background: linear-gradient(90deg, rgba(0,0,0,0.6) 0%, rgba(200,50,50,0) 100%);
-}
-
-.prev-btn-right:hover{
-    background: linear-gradient(270deg, rgba(0,0,0,0.6) 0%, rgba(200,50,50,0) 100%);
-}
+    .card{
+        margin-left: 20px;
+    }
 </style>
+<section class="section-text" style="margin-top: 150px;">
 
-<section class="project">
-    <div class="container">
-        <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img src="http://placehold.it/400x200&text=slide1" class="d-block w-100" alt="...">
-              </div>
-              <div class="carousel-item">
-                <img src="http://placehold.it/400x200&text=slide2" class="d-block w-100" alt="...">
-              </div>
-              <div class="carousel-item">
-                <img src="http://placehold.it/400x200&text=slide3" class="d-block w-100" alt="...">
-              </div>
-            </div>
-        </div>
-
-        <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <div class="row">
-                    <div class="col-md-3 carousel-prew">
-                        <img src="http://placehold.it/200x100&text=slide1" class="d-block" alt="...">
-                    </div>
-        
-                    <div class="col-md-3 carousel-prew">
-                        <img src="http://placehold.it/200x100&text=slide1" class="d-block" alt="...">
-                    </div>
-
-                    <div class="col-md-3 carousel-prew">
-                        <img src="http://placehold.it/200x100&text=slide1" class="d-block" alt="...">
-                    </div>
-    
-                    <div class="col-md-3 carousel-prew">
-                        <img src="http://placehold.it/200x100&text=slide1" class="d-block" alt="...">
-                    </div>
-                </div>
-              </div>
-
-              <div class="carousel-item">
-                <div class="row">
-                    <div class="col-md-3 carousel-prew">
-                        <img src="http://placehold.it/200x100&text=slide2" class="d-block" alt="...">
-                    </div>
-        
-                    <div class="col-md-3 carousel-prew">
-                        <img src="http://placehold.it/200x100&text=slide2" class="d-block" alt="...">
-                    </div>
-
-                    <div class="col-md-3 carousel-prew">
-                        <img src="http://placehold.it/200x100&text=slide2" class="d-block" alt="...">
-                    </div>
-    
-                    <div class="col-md-3 carousel-prew">
-                        <img src="http://placehold.it/200x100&text=slide2" class="d-block" alt="...">
-                    </div>
-                </div>
-              </div>
-
-            </div>
-
-            <button class="carousel-control-prev prev-btn-left" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-              <i class="bi bi-chevron-left dark-icon"></i>
-              <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next prev-btn-right" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-                <i class="bi bi-chevron-right dark-icon"></i>
-              <span class="visually-hidden">Next</span>
-            </button>
-        </div>
+    <div class="container text-center">
+        <h4>Projekte des Professors und seinen wissenschaftlichen Mitarbeitern</h4>
+        <hr>
+        <p>Hier könnte jeweils Ihre Werbung stehen und Texte zu den einzelnen Projekten </p>
     </div>
 </section>
-<script>
-    var myCarousel = document.getElementById('carouselExampleControls')
 
-myCarousel.addEventListener('slide.bs.carousel', function () {
-    console.log("sdf")
-})
-</script>
+<section class="cardholder">
+    <div class="container d-flex flex-wrap">
+        <div class="card" style="width: 18rem;">
+            <div class="card-header card-blue"></div>
+            <div class="card-image" style="background-image: url('{% static 'main/images/team/Licht1.jpg' %}')"></div>
+            <div class="card-body">
+              <h5 class="card-title">Licht und dessen Farben</h5>
+              <p class="card-text">Aus was besteht Licht und was haben die Lichtfarben damit zu tun?</p>
+              <a href="{% url 'experiments_doppelspalt' %}" class="btn btn-primary">Zur Beschreibung</a>
+            </div>
+        </div>
+
+        <div class="card" style="width: 18rem;">
+            <div class="card-header card-blue"></div>
+            <div class="card-image" style="background-image: url('{% static 'main/images/team/Licht2.jpg' %}')"></div>
+            <div class="card-body">
+              <h5 class="card-title">Licht? Welle oder Teilchen?</h5>
+              <p class="card-text">Wie ist Licht aufgebaut und ist Licht als Welle oder Teilchen zu betrachten</p>
+              <a href="{% url 'experiments_laser_emissions' %}" class="btn btn-primary">Zur Beschreibung</a>
+            </div>
+        </div>
+
+    </div>
+</section>
 
 
 {% endblock %}
